# aligned-example

./: .alignedignore  .gitignore  README.md  docker-compose.yaml  examples.ipynb  feature-store.json  pyproject.toml  server.py  with_aligned_pipeline.py  without_aligned_pipeline.py  worker.py
data/: snippets.csv  training_dataset.parquet
examples/: sources.py
examples/aligned_docs/: docs_snippet.py
examples/credit_scoring/: credit_history.py  laon.py  loan.py  model.py  zipcode.py
examples/mnist/: features.py  model.py  source.py
examples/question_similarity/: question.py
examples/taxi/: arrival.py  departure.py  model.py
examples/titanic/: model.py  passenger.py  source.py
loan_example/: README.md  loan_example.ipynb  loan_streamlit.py  model.py
prom_data/: prometheus.yml
